Updated game with more options, and more squares.

--- a/Index.html
+++ b/Index.html
@@ -5,11 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="colorgame.css">
 </head>
 <body>
-<h1> The Great
+<h1> Match the Color!
 <br>
- <span id="colorDisplay">RGB</span> 
+ <span id="colorDisplay">RGB</span>
 <br>
- Color Game </h1>
+ </h1>
 
 <div id="bar">
 	<button id="reset">New Colors</button>
@@ -17,12 +17,41 @@
 
 
 		<button class="mode">Easy</button>
-		<button class="mode">Medium</button>
-		<button class="mode selected">Hard</button>
+		<button class="mode selected">Medium</button>
+		<button class="mode">Hard</button>
+		<button class="mode">Insane</button>
+		<button class="mode">Psycho</button>
 
 </div>
-	
+
 	<div id="container">
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
+		<div class="square"></div>
 		<div class="square"></div>
 		<div class="square"></div>
 		<div class="square"></div>
